[project]
name = "db2s-geo-backend"
version = "0.1.0"
description = "DB2S-GEO backend — Phase 1 Discovery Engine MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["backend*", "connectors*"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["../tests"]
